logs/Slang/chapter-8/8.26.3--type_access_implements.sv.log
name: type_access_implements
description: access interface class type with scope resolution operator
should_fail: 0
tags: 8.26.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.3--type_access_implements.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.3--type_access_implements.sv:8:2: error: language feature not yet supported
	interface class ihello;
	^~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.3--type_access_implements.sv:13:2: error: language feature not yet supported
	class Hello implements ihello;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.3--type_access_implements.sv:19:2: error: use of undeclared identifier 'Hello'
	Hello obj;
	^~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.3--type_access_implements.sv:22:9: error: language feature not yet supported
		obj = new;
		      ^~~
